--- a/src/utils/projects.json
+++ b/src/utils/projects.json
@@ -1,37 +1,37 @@
 [
     {
         "title": "In memoriam",
-        "imagePath": "../assets/images/memorial.png",
+        "imagePath": "https://github.com/florhaidee/memorial/blob/master/public/images/memorial-home.png?raw=true",
         "liveUrl": "https://alwaysremember.herokuapp.com/",
         "gitHub": "https://github.com/florhaidee/memorial"
     },
     {
         "title": "Just Breathe",
-        "imagePath": "../assets/images/just-breathe.JPG",
+        "imagePath": "https://github.com/florhaidee/just-breathe/blob/master/assets/images/readme/main-page.JPG?raw=true",
         "liveUrl": "https://florhaidee.github.io/just-breathe/",
         "gitHub": "https://github.com/florhaidee/just-breathe"
     },
     {
         "title": "Tracking-Budget",
-        "imagePath": "../assets/images/tracking-budget.png",
+        "imagePath": "https://github.com/florhaidee/florhaidee-guerra/blob/feature/portfolio/src/assets/images/tracking-budget.png?raw=true",
         "liveUrl": "https://aqueous-badlands-76578.herokuapp.com/",
         "gitHub": "https://github.com/florhaidee/tracking-budget"
     },
     {
         "title": "Weather Dashboard",
-        "imagePath": "/florhaidee-guerra/src/assets/images/weather-dashboard.png",
+        "imagePath": "https://github.com/florhaidee/florhaidee-guerra/blob/feature/portfolio/src/assets/images/weather-dashboard.png?raw=true",
         "liveUrl": "https://florhaidee.github.io/weather-dashboard/",
         "gitHub": "https://github.com/florhaidee/weather-dashboard"
     },
     {
         "title": "Tech News",
-        "imagePath": "/src/assets/images/TechNews.png",
+        "imagePath": "https://github.com/florhaidee/florhaidee-guerra/blob/feature/portfolio/src/assets/images/TechNews.png?raw=true",
         "liveUrl": "https://gentle-bayou-27027.herokuapp.com/",
         "gitHub": "https://github.com/florhaidee/TechNews"
     },
     {
         "title": "Note Taker",
-        "imagePath": "../assets/images/note-taker.png",
+        "imagePath": "https://github.com/florhaidee/florhaidee-guerra/blob/feature/portfolio/src/assets/images/note-taker.png?raw=true",
         "liveUrl": "https://salty-tor-82151.herokuapp.com/",
         "gitHub": "https://github.com/florhaidee/note-taker"
     }
