--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.13.1",
     "react-responsive-carousel": "^3.2.9",
     "react-scripts": "3.4.3",
+    "react-typical": "^0.1.3",
     "react-useanimations": "^2.0.5"
   },
   "scripts": {
